Added other group refactor project + new windows +dependencies migrated from .NET 5 to .NET 6

--- a/1/refactor/Editor/Editor.csproj
+++ b/1/refactor/Editor/Editor.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <AssemblyName>Editor</AssemblyName>
     <RootNamespace>Editor</RootNamespace>
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OtherGroupRefactor\OtherGroupRefactor.csproj" />
     <ProjectReference Include="..\Refactor\Refactor.csproj" />
   </ItemGroup>
 
